[project]
name = "fastapi-multlimiter"
version = "0.1.0"
description = "Async rate limiter for FastAPI with fixed-window, sliding-window and token bucket algorithms"
readme = "README.md"
authors = [
    { name = "gr1zer1", email = "timuravramenko99@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
]
[tool.uv.build-backend]
module-root = ""

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "freezegun",
    "uvicorn",
]

[project.urls]
Homepage = "https://github.com/gr1zer1/fastapi-multlimiter"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"